objects/ssot__PromotionLimit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CurrentUsageNumber__c</fullName>
        <label>Current Usage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Promotion Limit Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LimitValueNumber__c</fullName>
        <label>Limit Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramCurrencyId__c</fullName>
        <label>Loyalty Program Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramCurrency__c</fullName>
        <label>Loyalty Program Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionId__c</fullName>
        <label>Promotion</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionLimitCategory__c</fullName>
        <label>Promotion Limit Category</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionLimitType__c</fullName>
        <label>Promotion Limit Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729832214776_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionLimit_LoyaltyProgramCurrenc_rel</label>
        <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
        <relationshipLabel>PromotionLimit_LoyaltyProgramCurrenc_rel</relationshipLabel>
        <relationshipName>rel_1729832214776_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659054109_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionLimit_PromotionId_map_Promo_rel</label>
        <referenceTo>ssot__Promotion__dlm</referenceTo>
        <relationshipLabel>PromotionLimit_PromotionId_map_Promo_rel</relationshipLabel>
        <relationshipName>rel_1731659054109_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>